Add general styling and fade in animation

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,4 +1,63 @@
+* {
+  box-sizing: border-box; }
+
+.hidden {
+  display: none; }
+
 body {
-  background: #30afea; }
+  background: #30afea;
+  color: #F9F7F8;
+  font-family: Helvetica, Arial, sans-serif; }
+
+#app, #loading {
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center; }
+
+#app #locname, #app #temp, #app #desc {
+  font-size: 50px; }
+#app #desc {
+  margin-top: 30px; }
+#app .wi {
+  font-size: 100px; }
+#app .btn {
+  display: inline-block;
+  padding: 15px 25px;
+  margin-top: 25px;
+  color: #F9F7F8;
+  text-decoration: none;
+  background: #9A9CA8; }
+
+.fadein {
+  animation: fadein 1s; }
+
+@-webkit-keyframes fadein {
+  0% {
+    transform: translateY(50px);
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
+@-moz-keyframes fadein {
+  0% {
+    transform: translateY(50px);
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
+@-ms-keyframes fadein {
+  0% {
+    transform: translateY(50px);
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
+@keyframes fadein {
+  0% {
+    transform: translateY(50px);
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
 
 /*# sourceMappingURL=style.css.map */
