--- a/docs/sass/style.sass
+++ b/docs/sass/style.sass
@@ -4,14 +4,21 @@
     box-sizing: border-box
 
 .hidden
-    display: none
+    display: none!important
 
 body
     background: #30afea
     color: #F9F7F8
     font-family: Helvetica, Arial, sans-serif
 
-#app, #loading
+#loading
+    display: grid
+    width: 100%
+    height: 100vh
+    align-items: center
+    justify-content: center
+
+#app
     max-width: 1200px
     margin: 0 auto
     text-align: center
